-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/compile.cpp:2027), pid=244972, tid=244987
# assert(false) failed: Should have been buffered
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-02-06-0803323.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-02-06-0803323.tobias..., compiled mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb32fc1] Compile::process_inline_types(PhaseIterGVN&, bool)+0x511
Current CompileTask:
C2: 13141 3608 b compiler.valhalla.inlinetypes.BlackholeTest::testNew (21 bytes)
Stack: [0x00007fcce9dfe000,0x00007fcce9eff000], sp=0x00007fcce9efa0b0, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb32fc1] Compile::process_inline_types(PhaseIterGVN&, bool)+0x511 (compile.cpp:2027)
V [libjvm.so+0xb511a9] Compile::Optimize()+0x1919 (compile.cpp:2910)
V [libjvm.so+0xb54989] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:842)
V [libjvm.so+0x94716e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb61fcc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb62dd8] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6876] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b25b40] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797cc3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
#
# Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/compile.cpp:2027), pid=244972, tid=244987
# assert(false) failed: Should have been buffered
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-02-06-0803323.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-02-06-0803323.tobias..., compiled mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb32fc1] Compile::process_inline_types(PhaseIterGVN&, bool)+0x511
Current CompileTask:
C2: 13141 3608 b compiler.valhalla.inlinetypes.BlackholeTest::testNew (21 bytes)
Stack: [0x00007fcce9dfe000,0x00007fcce9eff000], sp=0x00007fcce9efa0b0, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xb32fc1] Compile::process_inline_types(PhaseIterGVN&, bool)+0x511 (compile.cpp:2027)
V [libjvm.so+0xb511a9] Compile::Optimize()+0x1919 (compile.cpp:2910)
V [libjvm.so+0xb54989] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:842)
V [libjvm.so+0x94716e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb61fcc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb62dd8] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d6876] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b25b40] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797cc3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)