8301867: [lworld] BlackholeTest triggers assert "Should have been buffered"